feat: atualizar README.md e testes unitários para refletir mudanças na arquitetura
- Adicionada a biblioteca `testcontainers` ao README.md para suporte a testes de integração.
- Atualizados os testes unitários para utilizar as implementações de serviços correspondentes, como `AgendaServiceImpl`, `AgendaTimeServiceImpl`, `ErrorMappingServiceImpl`, `ExceptionMappingServiceImpl`, `IdempotencyServiceImpl`, `UserServiceImpl`, e `VoteServiceImpl`.
- O impacto é uma documentação mais precisa e testes que refletem a nova estrutura de serviços, melhorando a clareza e a robustez do código.